--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 
     <artifactId>iwvg-devops-laRosaMontero-NataliaP</artifactId>
     <groupId>es.upm.miw</groupId>
-    <version>4.1.0-Release</version>
+    <version>4.2.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>${project.groupId}.${project.artifactId}</name>
@@ -130,3 +130,4 @@
     </build>
 
 </project>
+
